# Superlib-template

./: .gitignore  CMakeLists.txt  README.md  meson.build  superlib.hpp  uninstall.sh
docs/: meson.build
subprojects/: CMakeLists.txt
subprojects/liba/: CMakeLists.txt  liba.cpp  meson.build
subprojects/liba/include/liba/: liba.hpp
subprojects/liba/src/: liba.cpp
subprojects/libb/: CMakeLists.txt  libb.cpp  libb.hpp  meson.build
subprojects/libb/src/: libb.cpp
subprojects/libc/: CMakeLists.txt  libc.cpp  meson.build
subprojects/libc/include/libc/: libc.hpp
subprojects/libc/src/: libc.cpp
